--- a/shumi_server/templates/index.html
+++ b/shumi_server/templates/index.html
@@ -97,6 +97,16 @@
     <div class="card-header">
         <h3>🔮 幼崽行为预判</h3>
     </div>
+
+    <div style="display: flex; justify-content: center;">
+        <div class="model-toggle-wrapper">
+            <span>👨‍💻 爸爸牌预言机</span>
+            <label class="switch">
+                <input type="checkbox" id="localModelToggle">
+                <span class="slider round"></span>
+            </label>
+        </div>
+    </div>
     
     <div id="predictionDisplay" class="prediction-main">
         <div id="shumiLoader" class="shumi-loader" style="display: none;">
@@ -125,14 +135,6 @@
 
     <div class="prediction-controls">
         <button class="btn-get-forecast" id="forecastBtn" onclick="updatePrediction()">📡 发送信号</button>
-
-        <div class="model-toggle-wrapper">
-            <span>👨‍💻 爸爸牌预言机</span>
-            <label class="switch">
-                <input type="checkbox" id="localModelToggle">
-                <span class="slider round"></span>
-            </label>
-    </div>
         <button class="btn-expand" id="expandBtn" onclick="toggleReasoning()" style="display: none;">查看推理详情</button>
     </div>
 </div>
