Breaks JS file into modules

--- a/shumi_server/templates/index.html
+++ b/shumi_server/templates/index.html
@@ -157,6 +157,7 @@
 <script id="chart-data" type="application/json">
     {{ chart_data_json|safe }}
 </script>
-<script src="{% static 'script.js' %}"></script>
+<script type="module" src="{% static 'js/main.js' %}"></script>
+<!-- <script src="{% static 'script.js' %}"></script> -->
 </body>
 </html>
