--- a/shumi_server/templates/base.html
+++ b/shumi_server/templates/base.html
@@ -23,5 +23,8 @@
 <main class="content">
     {% block content %}{% endblock %}
 </main>
+<!-- {% block extra_js %}
+<script type="module" src="{% static 'js/analytics_main.js' %}"></script>
+{% endblock %} -->
 </body>
 </html>
