--- a/shumi_server/templates/analytics.html
+++ b/shumi_server/templates/analytics.html
@@ -18,6 +18,15 @@
                     目标: <span id="milkTargetDisplay">{{ milk_target }}</span>ml
                 </div>
             </div>
+            <div class="hydration-visuals-wrapper">
+            <div class="liquid-container">
+                <div id="liquidLevel" class="liquid"></div>
+            </div>
+            
+            <div class="pie-container">
+                <canvas id="milkTypeChart"></canvas>
+            </div>
+        </div>
             <div class="hydration-visual">
                 <div class="liquid-container">
                     <div id="liquidLevel" class="liquid"></div>
