links analytics stylesheet correctly

--- a/shumi_server/templates/base.html
+++ b/shumi_server/templates/base.html
@@ -4,6 +4,7 @@
 <head>
     <title>Shumi Tracker</title>
     <link rel="stylesheet" href="{% static 'style.css' %}">
+    <link rel="stylesheet" href="{% static 'css/analytics.css' %}">
     
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
